Implements x-cloak to solve content flicker

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
     font-display: swap;
 }
 
+[x-cloak] { display: none !important; }
+
 .about-text {
     font-family: monospace;
     font-size: large;
